First working Jersey/REST API test